--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "clipboard": "2.0.11",
     "datatables.net": "^2.0.4",
     "datatables.net-bs5": "^2.0.4",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "jspdf-autotable": "^3.8.4",
     "line-awesome": "1.3.0",
@@ -67,6 +69,7 @@
     "@angular/compiler-cli": "^17.0.8",
     "@types/bootstrap": "^5.2.6",
     "@types/datatables.net": "^1.12.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.4",
     "@types/jquery": "^3.5.29",
     "@types/node": "^20.10.5",
