--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "angular-in-memory-web-api": "^0.17.0",
     "animate.css": "4.1.1",
     "apexcharts": "^3.37.1",
-    "bootstrap": "5.3.2",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.10.3",
     "clipboard": "2.0.11",
     "datatables.net": "^2.0.4",
