--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^18.0.0",
     "@angular/animations": "^17.0.8",
     "@angular/common": "^17.0.8",
     "@angular/compiler": "^17.0.8",
@@ -40,6 +41,7 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "line-awesome": "1.3.0",
     "moment": "^2.29.4",
