--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "datatables.net-bs5": "^2.0.4",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.11",
     "jquery": "^3.6.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
