--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^17.0.0",
     "nouislider": "^15.7.0",
+    "num-words": "^1.2.3",
     "object-path": "0.11.8",
     "prism-themes": "1.9.0",
     "prismjs": "^1.29.0",
