--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "dependencies": {
     "@angular-slider/ngx-slider": "^18.0.0",
     "@angular/animations": "^17.0.8",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.0.8",
     "@angular/compiler": "^17.0.8",
     "@angular/core": "^17.0.8",
     "@angular/forms": "^17.0.8",
     "@angular/localize": "^17.0.8",
-    "@angular/material": "^17.0.4",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
@@ -29,6 +30,7 @@
     "@ngx-translate/http-loader": "8.0.0",
     "@popperjs/core": "2.11.8",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
+    "angular-archwizard": "^7.0.0",
     "angular-datatables": "^17.1.0",
     "angular-in-memory-web-api": "^0.17.0",
     "animate.css": "4.1.1",
