--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ng-inline-svg-2": "^15.0.1",
     "ngx-clipboard": "16.0.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-print": "^2.0.0",
     "ngx-spinner": "^17.0.0",
     "nouislider": "^15.7.0",
     "num-words": "^1.2.3",
