--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "moment": "^2.29.4",
     "ng-apexcharts": "^1.7.4",
     "ng-inline-svg-2": "^15.0.1",
+    "ng2-filter-pipe": "^0.1.9",
     "ngx-clipboard": "16.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-print": "^2.0.0",
